[package]
name = "eiz"
version = "0.3.0"
authors = ["Mack Straight <mack@discordapp.com>"]
edition = "2018"
description = "some more code"
license = "MIT"
repository = "https://github.com/eiz/eiz"

[features]
default = []
use_std = []
nvenc = []
rt_queue = []
rt_queue_std = ["parking_lot", "rt_queue", "use_std"]

[dependencies]
parking_lot = { optional = true, version = "0.10.0" }
