[package]
name = "eiz"
version = "0.3.0"
authors = ["Mack Straight <mack@discordapp.com>"]
edition = "2018"
description = "some more code"
license = "MIT"
repository = "https://github.com/eiz/eiz"

[features]
default = []
use_std = []
com = [
    "winapi",
    "winapi/combaseapi",
    "winapi/minwindef",
    "winapi/oleauto",
    "winapi/objbase",
    "winapi/unknwnbase",
    "winapi/winerror",
    "winapi/winnt",
    "winapi/wtypes",
]
decklink = [
    "winapi",
    "winapi/minwindef",
    "winapi/unknwnbase",
    "winapi/windef",
    "winapi/winnt",
    "winapi/wtypes",
]
nvenc = []
rt_queue = []
rt_queue_std = ["parking_lot", "rt_queue", "use_std"]

[dependencies]
parking_lot = { optional = true, version = "0.10.0" }
winapi = { optional = true, version = "0.3" }
